unpackaged/main/default/objects/SBQQ__Quote__c/fields/A_La_Carte_Delivery_Net_Total__c.field-meta.xml
<CustomField>
    <fullName>A_La_Carte_Delivery_Net_Total__c</fullName>
    <label>A La Carte - Delivery Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>