unpackaged/main/default/objects/SBQQ__Quote__c/fields/A_la_carte_Operations_Net_Total__c.field-meta.xml
<CustomField>
    <fullName>A_la_carte_Operations_Net_Total__c</fullName>
    <label>A la carte Operations Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>