unpackaged/main/default/objects/SBQQ__Quote__c/fields/A_La_Carte_Upfront_Install__c.field-meta.xml
<CustomField>
    <fullName>A_La_Carte_Upfront_Install__c</fullName>
    <formula>Net_Total_Install__c +  A_La_Carte_Install_Net_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>A La Carte + Upfront Install</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>