unpackaged/main/default/objects/SBQQ__Quote__c/fields/Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes__c</fullName>
    <inlineHelpText>Additional notes to show on the Quote/Contract</inlineHelpText>
    <label>Customer Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>