unpackaged/main/default/objects/SBQQ__Quote__c/fields/AFT_Required__c.field-meta.xml
<CustomField>
    <fullName>AFT_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AFT Required?</label>
    <type>Checkbox</type>
</CustomField>