unpackaged/main/default/objects/SBQQ__Quote__c/fields/Alert__c.field-meta.xml
<CustomField>
    <fullName>Alert__c</fullName>
    <description>Important message about this Quote. Blank if none exists.</description>
    <formula>IF(DATEVALUE( CreatedDate ) &gt; DATE (2019,04,27),NULL, IMAGE("/servlet/servlet.FileDownload?file=0150g000007Pe0H", "Warning") )</formula>
    <inlineHelpText>Important message about this Quote. Blank if none exists.</inlineHelpText>
    <label>Alert</label>
    <type>Text</type>
</CustomField>