unpackaged/main/default/objects/SBQQ__Quote__c/fields/Allocated_BAFE__c.field-meta.xml
<CustomField>
    <fullName>Allocated_BAFE__c</fullName>
    <label>Allocated BAFE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>