unpackaged/main/default/objects/SBQQ__Quote__c/fields/Amortized_Project_Costs_L__c.field-meta.xml
<CustomField>
    <fullName>Amortized_Project_Costs_L__c</fullName>
    <label>Amortized Project Costs (L)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>