unpackaged/main/default/objects/SBQQ__Quote__c/fields/Approval_Flow__c.field-meta.xml
<CustomField>
    <fullName>Approval_Flow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship between Quote and Approval Flow</description>
    <inlineHelpText>Lookup relationship between Quote and Approval Flow to allow population of Approval Flow: Description</inlineHelpText>
    <label>Approval Flow</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Approval_Flow__c.Related_Object__c</field>
            <operation>equals</operation>
            <value>Quote</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Approval_Flow__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>