unpackaged/main/default/objects/SBQQ__Quote__c/fields/Approval_Flow_Disc_No_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Approval_Flow_Disc_No_List_Price__c</fullName>
    <description>Indicates which approval flow to run for missing List Price or discounted List Price</description>
    <formula>IF(ISPICKVAL(Transaction_Type__c, "Sale"), 8,
IF(ISPICKVAL(Transaction_Type__c, "Disaster"), 8,
IF(ISPICKVAL(Transaction_Type__c, "Lodging"), 8,
 IF(Lowest_List_Price__c = 0 || Highest_Add_Disc__c &gt; 0, 8, 9))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates which approval flow to run for missing List Price or discounted List Price</inlineHelpText>
    <label>Approval Flow: Disc/No List Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>