unpackaged/main/default/objects/SBQQ__Quote__c/fields/Approval_Flow_Effective__c.field-meta.xml
<CustomField>
    <fullName>Approval_Flow_Effective__c</fullName>
    <description>Indicates which approval flow is running</description>
    <formula>MIN( Approval_Flow_Fixed_Asset_Sale__c , Approval_Flow_Non_STD_Bid_Set__c , Approval_Flow_Standard_Bid_Set__c , Approval_Flow_CAPEX_T_Cs__c , Approval_Flow_Disc_No_List_Price__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates which approval flow is running</inlineHelpText>
    <label>Approval Flow: Effective</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>