unpackaged/main/default/objects/SBQQ__Quote__c/fields/Approval_Flow_Fixed_Asset_Sale__c.field-meta.xml
<CustomField>
    <fullName>Approval_Flow_Fixed_Asset_Sale__c</fullName>
    <description>Indicates which approval flow to run for Fixed Asset Sales</description>
    <formula>If(ISPICKVAL(Transaction_Type__c, "Rental"), 9,
 If(ISPICKVAL(Transaction_Type__c, "Disaster"), 9,
  If(ISPICKVAL(Transaction_Type__c, "Lodging"), 9,

   
    IF(Highest_Asset_Age__c &gt;= 10,    
        If(Total_NBV_Markup_of_Sale__c &gt;= 0.25,
            IF(Total_NBV_of_Sale_and_Carry_On__c &lt; 10000, 8,
                IF(AND(Total_NBV_of_Sale_and_Carry_On__c &gt;= 10000, Total_NBV_of_Sale_and_Carry_On__c &lt; 100000), 7, 
                    IF(AND(Total_NBV_of_Sale_and_Carry_On__c &gt;= 100000, Total_NBV_of_Sale_and_Carry_On__c &lt; 250000), 6, 
                        IF(AND(Total_NBV_of_Sale_and_Carry_On__c &gt;= 250000, Total_NBV_of_Sale_and_Carry_On__c &lt; 500000), 5,  
                                IF(AND(Total_NBV_of_Sale_and_Carry_On__c &gt;= 500000, Total_NBV_of_Sale_and_Carry_On__c &lt; 2500000),3,  
                                    IF(Total_NBV_of_Sale_and_Carry_On__c &gt;= 2500000, 1, 9 
                                        )   
                                    ) 
                                 
                            ) 
                        ) 
                    )    
                ),

        IF(AND(Total_NBV_of_Sale_and_Carry_On__c &gt; 0, Total_NBV_of_Sale_and_Carry_On__c &lt; 1000000), 3, 
            IF(Total_NBV_of_Sale_and_Carry_On__c &gt;= 1000000, 1,
                IF( Total_Carry_On_Asset_Contract_Value__c &gt; 0, 8, 9)
                )
            )
        ),
        IF(Highest_Asset_Age__c &lt; 10,
            IF(Total_Sale_Contract_Value__c &gt;= Total_Quote_Line_Replacement_Costs_Sale__c,
                IF(Total_NBV_of_Sale_and_Carry_On__c &lt; 250000,6,
                    IF(AND(Total_NBV_of_Sale_and_Carry_On__c&gt;=250000,Total_NBV_of_Sale_and_Carry_On__c&lt;500000),5,
                        IF(AND(Total_NBV_of_Sale_and_Carry_On__c&gt;=500000,Total_NBV_of_Sale_and_Carry_On__c&lt;2500000),3,1
                           )
                        )
                    ),IF(Total_NBV_of_Sale_and_Carry_On__c &lt; 1000000,3,1)
            ),9
        )
            
    )
   )
  )
)</formula>
    <inlineHelpText>Indicates which approval flow to run for Fixed Asset Sales</inlineHelpText>
    <label>Approval Flow: Fixed Asset Sale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>