unpackaged/main/default/objects/SBQQ__Quote__c/fields/Approval_Flow_Non_STD_Bid_Set__c.field-meta.xml
<CustomField>
    <fullName>Approval_Flow_Non_STD_Bid_Set__c</fullName>
    <description>Indicates which approval flow to run for Non-Standard bids, except T&amp;C Type "Gov't/Design Build" and T&amp;C clauses (see CAPEX/T&amp;Cs)</description>
    <formula>IF( T_C__c = "Non-Standard - Legal" || T_C__c = "Non-Standard - Commercial",
    IF(SBQQ__NetAmount__c &lt; 3000000, 5,
        IF(AND(SBQQ__NetAmount__c &gt;= 3000000, SBQQ__NetAmount__c &lt; 6000000), 3,
            IF( SBQQ__NetAmount__c &gt;= 6000000, 1, 9 
            )
        )
    ),
    IF(T_C__c = "MSSA",
        IF(SBQQ__NetAmount__c &lt; 50000, 6,
            IF(AND(SBQQ__NetAmount__c &gt;= 50000, SBQQ__NetAmount__c &lt; 100000), 5,
                IF(AND(SBQQ__NetAmount__c &gt;= 100000, SBQQ__NetAmount__c &lt; 500000), 3, 
                    IF(AND(SBQQ__NetAmount__c &gt;= 500000, SBQQ__NetAmount__c &lt; 3000000), 2,
                       IF(SBQQ__NetAmount__c &gt;= 3000000, 1, 9) 
                    ) 
                )
            )
        ),9    
    )
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates which approval flow to run for Non-Standard bids, except T&amp;C Type "Gov't/Design Build" and T&amp;C clauses (see CAPEX/T&amp;Cs)</inlineHelpText>
    <label>Approval Flow: Non-STD Bid Set</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>