unpackaged/main/default/objects/SBQQ__Quote__c/fields/Approval_Flow_Standard_Bid_Set__c.field-meta.xml
<CustomField>
    <fullName>Approval_Flow_Standard_Bid_Set__c</fullName>
    <description>Indicates which approval flow to run for Standard bid sets</description>
    <formula>IF( T_C__c = "Standard", 

IF(AND( SBQQ__NetAmount__c &gt;= 0, SBQQ__NetAmount__c &lt; 50000), 9,
IF(AND( SBQQ__NetAmount__c &gt;= 50000, SBQQ__NetAmount__c &lt; 400000), 8,
IF(AND( SBQQ__NetAmount__c &gt;= 400000, SBQQ__NetAmount__c &lt; 750000), 7,
IF(AND( SBQQ__NetAmount__c &gt;= 750000, SBQQ__NetAmount__c &lt; 1500000), 6,
IF(AND( SBQQ__NetAmount__c &gt;= 1500000, SBQQ__NetAmount__c &lt; 3000000), 5,
IF(AND( SBQQ__NetAmount__c &gt;= 3000000, SBQQ__NetAmount__c &lt; 6000000), 3,
IF( SBQQ__NetAmount__c &gt;= 6000000, 1, 9 ) )) ) ) )), 9)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates which approval flow to run for Standard bid sets</inlineHelpText>
    <label>Approval Flow: Standard Bid Set</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>