unpackaged/main/default/objects/SBQQ__Quote__c/fields/Approval_Image__c.field-meta.xml
<CustomField>
    <fullName>Approval_Image__c</fullName>
    <description>Displays an image if the Quote is approved</description>
    <formula>IF(  TEXT( SBQQ__Status__c )="Approved"  ,  IMAGE("https://bdgl.sharepoint.com/sites/FC/Shared%20Documents/Approved.png", "Approved Quote") , "")</formula>
    <inlineHelpText>Displays an image if the Quote is approved</inlineHelpText>
    <label>Approval Image</label>
    <type>Text</type>
</CustomField>