unpackaged/main/default/objects/SBQQ__Quote__c/fields/Approval_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Approval_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Reminder</label>
    <type>Checkbox</type>
</CustomField>