unpackaged/main/default/objects/SBQQ__Quote__c/fields/Approver_B__c.field-meta.xml
<CustomField>
    <fullName>Approver_B__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Authority Matrix level B Approver - pulled from Branch</description>
    <inlineHelpText>Authority Matrix level B Approver - pulled from Branch</inlineHelpText>
    <label>Approver B</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QuotesB</relationshipName>
    <type>Lookup</type>
</CustomField>