unpackaged/main/default/objects/SBQQ__Quote__c/fields/Approver_C__c.field-meta.xml
<CustomField>
    <fullName>Approver_C__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Authority Matrix level C Approver - pulled from Branch</description>
    <inlineHelpText>Authority Matrix level C Approver - pulled from Branch</inlineHelpText>
    <label>Approver C</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QuotesC</relationshipName>
    <type>Lookup</type>
</CustomField>