unpackaged/main/default/objects/SBQQ__Quote__c/fields/Approver_E__c.field-meta.xml
<CustomField>
    <fullName>Approver_E__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Authority Matrix level E Approver - pulled from Branch</description>
    <inlineHelpText>Authority Matrix level E Approver - pulled from Branch</inlineHelpText>
    <label>Approver E</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QuotesE</relationshipName>
    <type>Lookup</type>
</CustomField>