unpackaged/main/default/objects/SBQQ__Quote__c/fields/Approver_G__c.field-meta.xml
<CustomField>
    <fullName>Approver_G__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Authority Matrix level G Approver - pulled from Branch</description>
    <inlineHelpText>Authority Matrix level G Approver - pulled from Branch</inlineHelpText>
    <label>Approver G</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QuotesG</relationshipName>
    <type>Lookup</type>
</CustomField>