unpackaged/main/default/objects/SBQQ__Quote__c/fields/Approver_H__c.field-meta.xml
<CustomField>
    <fullName>Approver_H__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver H</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>