unpackaged/main/default/objects/SBQQ__Quote__c/fields/Approver_I__c.field-meta.xml
<CustomField>
    <fullName>Approver_I__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Authority Matrix Level I Approver</description>
    <inlineHelpText>Authority Matrix Level I Approver - pulled from Branch</inlineHelpText>
    <label>Approver I</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>