unpackaged/main/default/objects/SBQQ__Quote__c/fields/Backend_Costs__c.field-meta.xml
<CustomField>
    <fullName>Backend_Costs__c</fullName>
    <formula>CASE( Transaction_Type__c ,
'Rental',Backend_Teardown_Costs_L__c,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Backend Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>