unpackaged/main/default/objects/SBQQ__Quote__c/fields/Backend_Markup_4__c.field-meta.xml
<CustomField>
    <fullName>Backend_Markup_4__c</fullName>
    <label>Backend Markup 4</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>