unpackaged/main/default/objects/SBQQ__Quote__c/fields/Backend_Net_Total__c.field-meta.xml
<CustomField>
    <fullName>Backend_Net_Total__c</fullName>
    <label>Backend Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>