unpackaged/main/default/objects/SBQQ__Quote__c/fields/Backend_Products_Cost__c.field-meta.xml
<CustomField>
    <fullName>Backend_Products_Cost__c</fullName>
    <description>To be used for US East Products brought over from DWS</description>
    <label>Backend Products Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>