unpackaged/main/default/objects/SBQQ__Quote__c/fields/Backend_TD_Mark_up_L__c.field-meta.xml
<CustomField>
    <fullName>Backend_TD_Mark_up_L__c</fullName>
    <label>Backend TD Mark-up (L)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>