unpackaged/main/default/objects/SBQQ__Quote__c/fields/Backend_Teardown_Costs_L__c.field-meta.xml
<CustomField>
    <fullName>Backend_Teardown_Costs_L__c</fullName>
    <label>Backend Teardown Costs (L)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>