unpackaged/main/default/objects/SBQQ__Quote__c/fields/BAFE__c.field-meta.xml
<CustomField>
    <fullName>BAFE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BAFE #</label>
    <referenceTo>BAFE__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>