unpackaged/main/default/objects/SBQQ__Quote__c/fields/Bed_Count__c.field-meta.xml
<CustomField>
    <fullName>Bed_Count__c</fullName>
    <description>Bed count, populated by IPS sync</description>
    <inlineHelpText>Bed count, populated by IPS sync</inlineHelpText>
    <label>Bed Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>