unpackaged/main/default/objects/SBQQ__Quote__c/fields/Bid_Negotiate__c.field-meta.xml
<CustomField>
    <fullName>Bid_Negotiate__c</fullName>
    <label>Bid/Negotiate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bid</fullName>
            </value>
            <value>
                <fullName>Negotiate</fullName>
                <default>true</default>
                <label>Negotiate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>