unpackaged/main/default/objects/SBQQ__Quote__c/fields/Bid_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Bid_Sheet__c</fullName>
    <formula>HYPERLINK( "https://bdgl.sharepoint.com/sites/FC/BD%20Documents/"&amp;Contract_Number__c&amp;"/Project%20Documents/24.%20BidSheet/"&amp;Name&amp;"%20"&amp;Contract_Number__c &amp;"%20Bidsheet%20"&amp;SBQQ__Opportunity2__r.Name&amp;".pdf","Bid Sheet", "_blank")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bid Sheet</label>
    <type>Text</type>
</CustomField>