unpackaged/main/default/objects/SBQQ__Quote__c/fields/Bid_Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Bid_Submit_Date__c</fullName>
    <label>Bid Submit Date</label>
    <type>DateTime</type>
</CustomField>