unpackaged/main/default/objects/SBQQ__Quote__c/fields/Bidsheet__c.field-meta.xml
<CustomField>
    <fullName>Bidsheet__c</fullName>
    <formula>"https://bdgl.sharepoint.com/sites/FC/BD%20Documents/"&amp;""&amp;Contract_Number__c&amp;"/Project%20Documents/24.%20BidSheet/"&amp;Name&amp;"%20"&amp;Contract_Number__c &amp;"%20Bidsheet%20"&amp;SBQQ__Opportunity2__r.Name&amp;".pdf"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bidsheet</label>
    <type>Text</type>
</CustomField>