unpackaged/main/default/objects/SBQQ__Quote__c/fields/Bidsheet_URL__c.field-meta.xml
<CustomField>
    <fullName>Bidsheet_URL__c</fullName>
    <label>Bidsheet URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>