unpackaged/main/default/objects/SBQQ__Quote__c/fields/Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type__c</fullName>
    <inlineHelpText>Spud to Rig Release – Includes Well to Well
Spud to Spud – Bill for each drilling from start to start of next drilling
Every Day – Bill using a Daily Rate
Monthly – Bill using a monthly rate</inlineHelpText>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Days Used</fullName>
            </value>
            <value>
                <fullName>Every Day</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>One Time</fullName>
            </value>
            <value>
                <fullName>Spud to Rig Release</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>