unpackaged/main/default/objects/SBQQ__Quote__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <description>Used to inform Price Rules for Purchases and Rentals. Branch matches to same field on Price List object to assist with proper pricing reference.</description>
    <formula>SBQQ__Opportunity2__r.Branch_Name_Text__c</formula>
    <inlineHelpText>Branch selected on the related Opportunity record</inlineHelpText>
    <label>Branch</label>
    <type>Text</type>
</CustomField>