unpackaged/main/default/objects/SBQQ__Quote__c/fields/Branch_Manager__c.field-meta.xml
<CustomField>
    <fullName>Branch_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes6</relationshipName>
    <type>Lookup</type>
</CustomField>