unpackaged/main/default/objects/SBQQ__Quote__c/fields/BTG__c.field-meta.xml
<CustomField>
    <fullName>BTG__c</fullName>
    <formula>SBQQ__Opportunity2__r.Branch_Name__r.Bidsheet_Template_Group__c</formula>
    <label>Bidsheet Template Group</label>
    <type>Text</type>
</CustomField>