unpackaged/main/default/objects/SBQQ__Quote__c/fields/Building_Cost__c.field-meta.xml
<CustomField>
    <fullName>Building_Cost__c</fullName>
    <label>Building Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>