unpackaged/main/default/objects/SBQQ__Quote__c/fields/Building_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Building_Numbers__c</fullName>
    <label>Building Numbers</label>
    <type>TextArea</type>
</CustomField>