unpackaged/main/default/objects/SBQQ__Quote__c/fields/Building_Selling_Price_2__c.field-meta.xml
<CustomField>
    <fullName>Building_Selling_Price_2__c</fullName>
    <formula>IF(Markup_2__c=0,null,Infleet_Selling_Price_2__c +  New_Unit_Selling_Price_2__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building Selling Price 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>