unpackaged/main/default/objects/SBQQ__Quote__c/fields/Building_Selling_Price_3__c.field-meta.xml
<CustomField>
    <fullName>Building_Selling_Price_3__c</fullName>
    <formula>IF(Markup_3__c=0,null,Infleet_Selling_Price_3__c +  New_Unit_Selling_Price_3__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building Selling Price 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>