unpackaged/main/default/objects/SBQQ__Quote__c/fields/Bundled_Backend_Costs__c.field-meta.xml
<CustomField>
    <fullName>Bundled_Backend_Costs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Bundled Backend Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>