unpackaged/main/default/objects/SBQQ__Quote__c/fields/Bundled_Upfront_Costs__c.field-meta.xml
<CustomField>
    <fullName>Bundled_Upfront_Costs__c</fullName>
    <description>To be used for Standard Bundles</description>
    <label>Bundled Upfront Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>