unpackaged/main/default/objects/SBQQ__Quote__c/fields/Bundled_Upfront_Net_Totals__c.field-meta.xml
<CustomField>
    <fullName>Bundled_Upfront_Net_Totals__c</fullName>
    <label>Bundled Upfront Net Totals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>