unpackaged/main/default/objects/SBQQ__Quote__c/fields/Camp_Operations_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Camp_Operations_Contract_Value__c</fullName>
    <description>Total contract value of Camp Operations quote lines excluding Optional</description>
    <inlineHelpText>Total contract value of Camp Operations quote lines excluding Optional</inlineHelpText>
    <label>Camp Operations Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>