unpackaged/main/default/objects/SBQQ__Quote__c/fields/Camp_Operations_Markup__c.field-meta.xml
<CustomField>
    <fullName>Camp_Operations_Markup__c</fullName>
    <formula>IF( Camp_Operations_Total_Cost__c = 0, 0, ( Camp_Operations_Contract_Value__c - Camp_Operations_Total_Cost__c )/ Camp_Operations_Total_Cost__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Camp Operations Markup %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>