unpackaged/main/default/objects/SBQQ__Quote__c/fields/Camp_Operations_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Camp_Operations_Total_Cost__c</fullName>
    <description>Total cost of Camp Operations quote lines, excluding Optional</description>
    <inlineHelpText>Total cost of Camp Operations quote lines, excluding Optional</inlineHelpText>
    <label>Camp Operations Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>