unpackaged/main/default/objects/SBQQ__Quote__c/fields/CAPEX_Approval_Amount_Override__c.field-meta.xml
<CustomField>
    <fullName>CAPEX_Approval_Amount_Override__c</fullName>
    <description>If CAPE Approval Amount is different from CAPEX - Total, enter it here</description>
    <label>CAPEX Approval Amount Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>