unpackaged/main/default/objects/SBQQ__Quote__c/fields/CAPEX_New_Build_Total__c.field-meta.xml
<CustomField>
    <fullName>CAPEX_New_Build_Total__c</fullName>
    <description>Total Cost of quote lines where the Cost Type is CAPEX - New Build. Populated by Summary Variable &amp; Price Rule.</description>
    <inlineHelpText>Total amount of New Build CAPEX on this quote.</inlineHelpText>
    <label>CAPEX - New Build Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>